Creating output fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#d35400</color>
 
     <color name="simulatedTime">#FFFFFF</color>
+    <color name="toolBarText">#FFFFFF</color>
+
+    <color name="line">#000000</color>
 </resources>
