First blink Led

--- a/app/src/main/res/drawable/on_led.xml
+++ b/app/src/main/res/drawable/on_led.xml
@@ -5,6 +5,6 @@
 
     <stroke
         android:width="10dp"
-        android:color="@color/off_led" />
-    <solid android:color="@color/off_led" />
+        android:color="@color/on_led" />
+    <solid android:color="@color/on_led" />
 </shape>
