--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="toolBarText">#FFFFFF</color>
 
     <color name="line">#000000</color>
+
+    <color name="off_led">#17A1A5</color>
+    <color name="on_led">#FFCC00</color>
 </resources>
