--- a/app/src/main/res/layout/io_interface.xml
+++ b/app/src/main/res/layout/io_interface.xml
@@ -22,44 +22,44 @@
             android:textColor="@color/simulatedTime" />
     </LinearLayout>
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/outputPins"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone"/>
 
-            <FrameLayout
-                android:id="@+id/outputPins"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-            </FrameLayout>
+        <FrameLayout
+            android:id="@+id/analogInputPins"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone"/>
 
-            <FrameLayout
-                android:id="@+id/analogInputPins"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-            </FrameLayout>
+        <FrameLayout
+            android:id="@+id/DigitalInputPins"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone"/>
 
-            <FrameLayout
-                android:id="@+id/DigitalInputPins"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+    </LinearLayout>
 
-            </FrameLayout>
-        </LinearLayout>
-    </ScrollView>
 
     <Button
         android:id="@+id/manualClock"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="Clock"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:text="Clock" />
 
 </LinearLayout>
