--- a/app/src/main/res/layout/output_pin.xml
+++ b/app/src/main/res/layout/output_pin.xml
@@ -7,8 +7,9 @@
 
     <Spinner
         android:id="@+id/pinSelector"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
     <android.support.v4.widget.Space
         android:layout_width="0dp"
