--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,9 @@
 
     <!--Number of modules of each device-->
     <integer name="ATmega328P">1</integer>
+
+    <!--Position in array of pins-->
+    <integer name="UNO_defaultPinPosition">13</integer>
+
+
 </resources>
