Pull-up condition

--- a/app/src/main/res/layout/io_interface.xml
+++ b/app/src/main/res/layout/io_interface.xml
@@ -23,36 +23,49 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical">
+        android:layout_weight="3">
 
-        <FrameLayout
-            android:id="@+id/outputPins"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/outputPins"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="gone"/>
+
+
+            <FrameLayout
+                android:id="@+id/analogInputPins"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="gone"/>
+
+
+            <FrameLayout
+                android:id="@+id/DigitalInputPins"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/hexFileErrorInstructions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/hex_file_read_fail_instructions"
             android:visibility="gone"/>
 
-
-        <FrameLayout
-            android:id="@+id/analogInputPins"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:visibility="gone"/>
-
-
-        <FrameLayout
-            android:id="@+id/DigitalInputPins"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:visibility="gone"/>
-
-    </LinearLayout>
+    </FrameLayout>
 
 
     <Button
