Output Module complete

--- a/app/src/main/res/layout/io_interface.xml
+++ b/app/src/main/res/layout/io_interface.xml
@@ -68,11 +68,11 @@
     </FrameLayout>
 
 
-    <Button
-        android:id="@+id/manualClock"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Clock" />
+    <!--<Button-->
+        <!--android:id="@+id/manualClock"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:text="Clock" />-->
 
 </LinearLayout>
