--- a/app/src/main/res/drawable/digital_input_off.xml
+++ b/app/src/main/res/drawable/digital_input_off.xml
@@ -6,6 +6,6 @@
     android:viewportHeight="24.0">
     <path
         android:pathData="M0,12l0,12 11.5,-5.7c6.3,-3.2 11.5,-6 11.5,-6.3 0,-0.3 -5.2,-3.1 -11.5,-6.3l-11.5,-5.7 0,12z"
-        android:strokeColor="@color/on_digital_input"
-        android:fillColor="@color/on_digital_input"/>
+        android:strokeColor="@color/off_digital_input"
+        android:fillColor="@color/off_digital_input"/>
 </vector>
