--- a/app/src/main/res/layout/digital_input_pin.xml
+++ b/app/src/main/res/layout/digital_input_pin.xml
@@ -1,49 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:padding="16dp">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/digitalPushButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/buttonOff"
-            android:background="@color/off_button"/>
-
-        <ToggleButton
-            android:id="@+id/digitalToggleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-    </FrameLayout>
-
+    <Button
+        android:id="@+id/digitalPushButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@color/off_button"
+        android:text="@string/buttonOff" />
 
     <android.support.v4.widget.Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
-
     <Spinner
-        android:id="@+id/pinSelector"
+        android:id="@+id/pinModeSelector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="3"/>
+
+    <Spinner
+        android:id="@+id/pinSelectorDigitalInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <ImageView
         android:id="@+id/digitalInputState"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:background="@drawable/digital_input_on"/>
+        android:background="@drawable/digital_input_undefined"
+        android:gravity="center"/>
 
 
 </LinearLayout>
