--- a/app/src/main/res/layout/frament_digital_input.xml
+++ b/app/src/main/res/layout/frament_digital_input.xml
@@ -11,7 +11,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/digitalInputSegment_fragment"
+            android:text="@string/digitalInputSection_fragment"
             android:textColor="@color/colorAccent" />
 
         <View
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/outputList"
+        android:id="@+id/digitalInputList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
