--- a/app/src/main/res/layout/io_interface.xml
+++ b/app/src/main/res/layout/io_interface.xml
@@ -50,7 +50,7 @@
 
 
             <FrameLayout
-                android:id="@+id/DigitalInputPins"
+                android:id="@+id/digitalInputPins"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
