--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="off_button">#17A1A5</color>
     <color name="on_button">#FFCC00</color>
 
+    <color name="undefined_digital_input">#808080</color>
     <color name="off_digital_input">#17A1A5</color>
     <color name="on_digital_input">#FFCC00</color>
 
