--- a/app/src/main/res/layout/fragment_io_interface.xml
+++ b/app/src/main/res/layout/fragment_io_interface.xml
@@ -28,6 +28,15 @@
         android:layout_height="0dp"
         android:layout_weight="3">
 
+        <TextView
+            android:id="@+id/startInstructions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/start_instructions"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:visibility="visible"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
