--- a/app/src/main/res/layout/digital_input_pin.xml
+++ b/app/src/main/res/layout/digital_input_pin.xml
@@ -18,7 +18,7 @@
     <android.support.v4.widget.Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="0.5"/>
     <Spinner
         android:id="@+id/pinModeSelector"
         android:layout_width="0dp"
@@ -27,8 +27,9 @@
 
     <Spinner
         android:id="@+id/pinSelectorDigitalInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"/>
 
     <ImageView
         android:id="@+id/digitalInputState"
