--- a/app/src/main/res/layout/fragment_io_interface.xml
+++ b/app/src/main/res/layout/fragment_io_interface.xml
@@ -8,19 +8,27 @@
 
     <include layout="@layout/include_main_toolbar" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/statusBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:orientation="horizontal">
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:id="@+id/simulatedTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/simulatedTime" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/statusInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"/>
+
+    </RelativeLayout>
 
 
     <FrameLayout
