--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -6,6 +6,7 @@
 
     <!--Position in array of pins-->
     <integer name="UNO_defaultPinPosition">13</integer>
+    <integer name="defaultSourcePower">5</integer>
 
     <integer-array name="UNO_digitalInputMemoryAddress">
         <!--PIN 0-->
