--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <!--Number of modules of each device-->
-    <integer name="ATmega328P">2</integer>
+    <!--CPU-->
+    <!--TIMER 0-->
+    <!--TIMER 1-->
+    <integer name="ATmega328P">3</integer>
 
     <!--Position in array of pins-->
     <integer name="UNO_defaultPinPosition">13</integer>
