--- a/app/src/main/res/layout/fragment_io_interface.xml
+++ b/app/src/main/res/layout/fragment_io_interface.xml
@@ -23,6 +23,14 @@
             android:textColor="@color/simulatedTime" />
 
         <TextView
+            android:id="@+id/memoryUsage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/white"/>
+
+        <TextView
             android:id="@+id/statusInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
