--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -38,4 +38,8 @@
         android:title="@string/action_clear_io"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_about"
+        android:title="@string/action_about"
+        app:showAsAction="never"/>
+
 </menu>
