--- a/app/src/main/res/menu/menu_memory_map.xml
+++ b/app/src/main/res/menu/menu_memory_map.xml
@@ -19,9 +19,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_delete"
-        android:icon="@drawable/ic_action_delete"
-        android:title="@string/action_delete"
-        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="@string/seach_mem_map"/>
 
 </menu>
