--- a/app/src/main/res/layout/fragment_io_interface.xml
+++ b/app/src/main/res/layout/fragment_io_interface.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2018
   ~ Kollins Lima (kollins.lima@gmail.com)
   ~
@@ -16,96 +15,108 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/include_main_toolbar" />
-
-    <RelativeLayout
-        android:id="@+id/statusBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/simulatedTime"
-            android:layout_width="wrap_content"
+
+        <include layout="@layout/include_main_toolbar" />
+
+        <RelativeLayout
+            android:id="@+id/statusBar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/simulatedTime" />
+            android:background="@color/colorPrimaryDark">
 
-        <TextView
-            android:id="@+id/memoryUsage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@android:color/white"/>
+            <TextView
+                android:id="@+id/simulatedTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/simulatedTime" />
 
-        <TextView
-            android:id="@+id/statusInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/memoryUsage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@android:color/white" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/statusInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true" />
 
+        </RelativeLayout>
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:id="@+id/fragmentBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:id="@+id/outputPins"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+
+
+                <FrameLayout
+                    android:id="@+id/inputPins"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/startInstructions"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:text="@string/start_instructions"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorPrimary"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/hexFileErrorInstructions"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:text="@string/hex_file_read_fail_instructions"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone" />
+
+        </FrameLayout>
+
+    </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/fragment_memory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"/>
 
-        <LinearLayout
-            android:id="@+id/fragmentBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:id="@+id/outputPins"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:visibility="gone"/>
-
-
-            <FrameLayout
-                android:id="@+id/inputPins"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/startInstructions"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/start_instructions"
-            android:background="@android:color/white"
-            android:textColor="@color/colorPrimary"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="visible"/>
-
-        <TextView
-            android:id="@+id/hexFileErrorInstructions"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/hex_file_read_fail_instructions"
-            android:textColor="@color/colorPrimary"
-            android:background="@android:color/white"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="gone"/>
-
-    </FrameLayout>
-
-</LinearLayout>
+</FrameLayout>
