--- a/app/src/main/res/layout/include_mem_map_toolbar.xml
+++ b/app/src/main/res/layout/include_mem_map_toolbar.xml
@@ -16,12 +16,14 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mep_map_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"
+    app:titleTextColor="@color/toolBarText">
 
-    <item android:id="@+id/action_delete"
-        android:icon="@drawable/ic_action_delete"
-        android:title="@string/action_delete"
-        app:showAsAction="always"/>
 
-</menu>
+</android.support.v7.widget.Toolbar>
