--- a/app/src/main/res/layout/output_pin.xml
+++ b/app/src/main/res/layout/output_pin.xml
@@ -30,10 +30,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
-    <android.support.v4.widget.Space
+    <LinearLayout
+        android:id="@+id/meter"
         android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:visibility="invisible"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/frequency"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:gravity="center"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/ledState"
