--- a/app/src/main/res/layout/row_memory_map.xml
+++ b/app/src/main/res/layout/row_memory_map.xml
@@ -17,7 +17,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="@dimen/row_mem_map"
     android:background="@android:color/black">
 
     <TextView
