--- a/app/src/main/res/layout/output_pin.xml
+++ b/app/src/main/res/layout/output_pin.xml
@@ -44,6 +44,13 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/dutycycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:gravity="center"/>
     </LinearLayout>
 
     <TextView
