--- a/app/src/main/res/layout/frament_input.xml
+++ b/app/src/main/res/layout/frament_input.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/labelInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/inputSection_fragment"
