--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2018
   ~ Kollins Lima (kollins.lima@gmail.com)
@@ -16,11 +15,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <dimen name="statusLedDimen">15dp</dimen>
-    <dimen name="about_space">20dp</dimen>
-    <dimen name="row_mem_map">50dp</dimen>
-    <dimen name="serial_close_button">25dp</dimen>
-    <dimen name="serial_send_button">40dp</dimen>
-    <dimen name="serial_text_size">12dp</dimen>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="@color/serial_theme_chars"
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+</vector>
