--- a/app/src/main/res/drawable/ic_send.xml
+++ b/app/src/main/res/drawable/ic_send.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2018
   ~ Kollins Lima (kollins.lima@gmail.com)
@@ -16,11 +15,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <dimen name="statusLedDimen">15dp</dimen>
-    <dimen name="about_space">20dp</dimen>
-    <dimen name="row_mem_map">50dp</dimen>
-    <dimen name="serial_close_button">25dp</dimen>
-    <dimen name="serial_send_button">40dp</dimen>
-    <dimen name="serial_text_size">12dp</dimen>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="@color/serial_theme_chars"
+        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+</vector>
