--- a/app/src/main/res/menu/pop_up_menu.xml
+++ b/app/src/main/res/menu/pop_up_menu.xml
@@ -21,9 +21,12 @@
     <item android:id="@+id/action_output"
         android:title="@string/action_output"/>
 
+    <item android:id="@+id/action_digital_input"
+        android:title="@string/action_input"/>
+
     <item android:id="@+id/action_analog_input"
         android:title="@string/action_anal_input"/>
 
-    <item android:id="@+id/action_digital_input"
-        android:title="@string/action_input"/>
+    <item android:id="@+id/action_serial_monitor"
+        android:title="@string/serial_monitor_title"/>
 </menu>
