--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,5 +45,6 @@
     <color name="short_circuit">#FF0000</color>
 
     <color name="serial_theme_background">#000000</color>
-    <color name="serial_theme_chars">#4FA404</color>
+    <color name="serial_theme_chars">@color/colorPrimary</color>
+    <!--<color name="serial_theme_chars">#4FA404</color>-->
 </resources>
