--- a/app/src/main/res/layout/about_page.xml
+++ b/app/src/main/res/layout/about_page.xml
@@ -20,13 +20,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/colorPrimary">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_about_page"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:text="@string/project_name"/>
 
     <android.support.v4.widget.Space
@@ -37,12 +44,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/black"
         android:text="@string/developer"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/black"
         android:text="@string/developer_name"/>
 
     <android.support.v4.widget.Space
@@ -52,6 +61,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
         android:text="@string/project_info"/>
 
     <TextView
