--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -46,6 +46,10 @@
         android:title="@string/action_clear_io"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_help"
+        android:title="@string/action_help"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         app:showAsAction="never"/>
