--- a/app/src/main/res/layout/about_page.xml
+++ b/app/src/main/res/layout/about_page.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2018
   ~ Kollins Lima (kollins.lima@gmail.com)
   ~
@@ -19,22 +18,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/colorPrimary"
     android:gravity="center"
-    android:background="@color/colorPrimary">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_about_page"/>
+        android:src="@drawable/logo_about_page" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/project_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:text="@string/project_name"/>
+        android:textStyle="bold" />
 
     <android.support.v4.widget.Space
         android:layout_width="wrap_content"
@@ -43,16 +42,41 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/developer"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/black"
-        android:text="@string/developer"/>
+        android:textColor="@android:color/black" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/developer_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/black"
-        android:text="@string/developer_name"/>
+        android:textColor="@android:color/black" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="("
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoLink="email"
+            android:gravity="center"
+            android:text="@string/developer_email"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")"
+            android:textColor="@android:color/black"/>
+
+    </LinearLayout>
 
     <android.support.v4.widget.Space
         android:layout_width="wrap_content"
@@ -61,8 +85,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="@string/project_info"/>
+        android:text="@string/project_info"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:layout_width="wrap_content"
