--- a/app/src/main/res/layout/digital_input_pin.xml
+++ b/app/src/main/res/layout/digital_input_pin.xml
@@ -32,10 +32,10 @@
         android:background="@color/off_button"
         android:text="@string/buttonOff" />
 
-    <android.support.v4.widget.Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5"/>
+<!--    <android.support.v4.widget.Space-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="0.5"/>-->
     <Spinner
         android:id="@+id/pinModeSelector"
         android:layout_width="0dp"
@@ -46,7 +46,7 @@
         android:id="@+id/pinSelectorDigitalInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"/>
+        android:layout_weight="3"/>
 
     <ImageView
         android:id="@+id/digitalInputState"
