--- a/app/src/main/res/layout/fragment_memory_map.xml
+++ b/app/src/main/res/layout/fragment_memory_map.xml
@@ -155,7 +155,7 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/memory_map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
