--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -50,6 +50,10 @@
         android:title="@string/action_help"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_report_bug"
+        android:title="@string/action_report_bug"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         app:showAsAction="never"/>
