--- a/app/src/main/res/menu/menu_memory_map.xml
+++ b/app/src/main/res/menu/menu_memory_map.xml
@@ -23,7 +23,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
         app:showAsAction="always|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="@string/seach_mem_map"/>
 
 </menu>
