--- a/app/src/main/res/layout/v1_output_fragment.xml
+++ b/app/src/main/res/layout/v1_output_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".v1.io.output.OutputFragmentV1">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/v1OuputFragmentLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,13 +21,14 @@
     <View
         android:layout_width="0dp"
         android:layout_height="@dimen/ioSeparatorSize"
-        android:background="@color/lineSeparator"
+        android:background="@color/v1_lineSeparator"
         app:layout_constraintLeft_toRightOf="@id/v1OuputFragmentLabel"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/v1OuputFragmentLabel"
         app:layout_constraintBottom_toBottomOf="@id/v1OuputFragmentLabel"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/outputList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/v1OuputFragmentLabel"
