--- a/app/src/main/res/layout/fragment_io_interface.xml
+++ b/app/src/main/res/layout/fragment_io_interface.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/simulatedTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/simulatedTime" />
 
@@ -52,7 +52,7 @@
                 android:id="@+id/statusInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
