--- a/app/src/main/res/layout/fragment_memory_map.xml
+++ b/app/src/main/res/layout/fragment_memory_map.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/memoryUsageBytes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/white" />
 
@@ -51,7 +51,7 @@
                     android:id="@+id/memoryUsagePercent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/white" />
 
