--- a/app/src/main/res/layout/frament_serial_monitor.xml
+++ b/app/src/main/res/layout/frament_serial_monitor.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text="@string/serial_monitor_title"
             android:textColor="@color/serial_theme_chars"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerInParent="true"/>
 
         <Button
@@ -40,7 +40,7 @@
             android:layout_width="@dimen/serial_close_button"
             android:layout_height="@dimen/serial_close_button"
             android:background="@drawable/ic_close"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentEnd="true"/>
 
     </RelativeLayout>
 
@@ -71,6 +71,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/serial_theme_chars"
             android:textColor="@color/serial_theme_chars"
+            android:inputType="text"
             android:textCursorDrawable="@null" />
 
         <Button
