--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -22,12 +22,12 @@
     <item android:id="@+id/action_play_pause"
         android:icon="@drawable/ic_action_play"
         android:title="@string/action_play_pause"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_add"
         android:icon="@drawable/ic_action_add"
         android:title="@string/action_add"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_import"
         android:icon="@drawable/ic_action_import"
