--- a/app/src/main/res/layout/v1_main_activity.xml
+++ b/app/src/main/res/layout/v1_main_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,12 +27,12 @@
             android:id="@+id/v1SimulatedTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
             android:paddingLeft="@dimen/simulatedTimePadding"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            app:layout_constraintTop_toTopOf="@id/v1StatusBar"
+            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@id/v1StatusBar"
-            app:layout_constraintLeft_toLeftOf="@id/v1StatusBar"/>
+            app:layout_constraintLeft_toLeftOf="@id/v1StatusBar"
+            app:layout_constraintTop_toTopOf="@id/v1StatusBar" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/v1StatusInfo"
@@ -41,9 +40,9 @@
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/statusInfoPadding"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            app:layout_constraintTop_toTopOf="@id/v1StatusBar"
             app:layout_constraintBottom_toBottomOf="@id/v1StatusBar"
-            app:layout_constraintRight_toRightOf="@id/v1StatusBar"/>
+            app:layout_constraintRight_toRightOf="@id/v1StatusBar"
+            app:layout_constraintTop_toTopOf="@id/v1StatusBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -57,7 +56,7 @@
             android:id="@+id/v1UsageInstructions"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"/>
+            android:gravity="center" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -70,11 +69,16 @@
                 android:layout_height="match_parent"
                 android:visibility="gone">
 
-                <fragment
-                    android:id="@+id/v1OutputFragment"
-                    android:name="com.kollins.project.sofia.v1.io.output.OutputFragmentV1"
+                <FrameLayout
+                    android:id="@+id/v1OutputFragmentFrame"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+
+                <!--                <fragment-->
+                <!--                    android:id="@+id/v1OutputFragment"-->
+                <!--                    android:name="com.kollins.project.sofia.v1.io.output.OutputFragmentV1"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent" />-->
 
                 <!--            <fragment-->
                 <!--                android:id="@+id/v1SerialMonitor"-->
