--- a/app/src/main/res/menu/v1_main_layout.xml
+++ b/app/src/main/res/menu/v1_main_layout.xml
@@ -2,19 +2,35 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <item-->
-<!--        android:id="@+id/action_reset"-->
-<!--        android:title="@string/reset"/>-->
+    <!--    <item-->
+    <!--        android:id="@+id/action_reset"-->
+    <!--        android:title="@string/reset"/>-->
 
     <item
         android:id="@+id/v1ActionAddIO"
-        android:title="@string/actionn_io_add"
         android:icon="@drawable/v1_ic_baseline_add_io"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/actionn_io_add"
+        app:showAsAction="ifRoom">
+
+        <menu>
+            <item
+                android:id="@+id/v1ActionAddOutput"
+                android:title="@string/action_output" />
+            <item
+                android:id="@+id/v1ActionAddDigitalInput"
+                android:title="@string/action_dig_input" />
+            <item
+                android:id="@+id/v1ActionAddAnalogInput"
+                android:title="@string/action_anal_input" />
+            <!--    <item-->
+            <!--        android:id="@+id/action_serial_monitor"-->
+            <!--        android:title="@string/serial_monitor_title" />-->
+        </menu>
+    </item>
 
     <item
         android:id="@+id/v1ActionImport"
         android:title="@string/actionn_import"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
